--- a/tailwindcss/src/index.css
+++ b/tailwindcss/src/index.css
@@ -23,3 +23,14 @@
   .animate-move {
     animation: move 2s linear infinite;
   }
+  
+          .blinking-cursor {
+            animation: blink 1s step-start infinite;
+          }
+          @keyframes blink {
+            0%, 50%, 100% { opacity: 1; }
+            25%, 75% { opacity: 0; }
+          }
+        .animate-blink {
+  animation: blink 1s step-start infinite;
+}
